all brewery pages have the brewery css applied to them and should be working as intended

--- a/pages/outlander.html
+++ b/pages/outlander.html
@@ -7,123 +7,125 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-        <img src="../images/brewImages/outlanderlogo.jpg" alt="Outlander Brewing" width="300">
-      <h2>Outlander Brewing</h2>
-      <p>Founded by co-ownwers Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
-    </div>
-    <div id='social'>
-      <ul>
-        <li><a href='http://www.outlander.com/'>Outlander Brewing Website</a></li>
-        <li><a href='https://www.facebook.com/OUTLANDERBREW/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-        <li><a href='https://twitter.com/outlanderbrew'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
-        <li><a href='https://www.instagram.com/outlanderbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-        <li><a href='https://untappd.com/OutlanderBrewery'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
-      </ul>
-    </div>
-    <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.6527931589885!2d-122.35775568454201!3d47.65231359281249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015a9b05a35d7%3A0x467c8ea9869faa86!2sOutlander+Brewery+and+Pub!5e0!3m2!1sen!2sus!4v1519352783737" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id="address">
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+          <img src="../images/brewImages/outlanderlogo.jpg" alt="Outlander Brewing" width="300">
+        <h2>Outlander Brewing</h2>
+        <p>Founded by co-ownwers Peter and Amy. Populuxe Brewing is the culmination of the dedication of home brewed beer that outgrew its space.  Within months of success, Populuxe Brewing is a nice small place with limited home-brewed beers.</p>
+      </div>
+      <div id='social'>
         <ul>
-          <li>225 N 36th St, </li>
-          <li>Seattle, WA 98103</li>
-          <li>Hours:</li>
-          <ul id="hours">
-            <li>Monday: CLOSED</li>
-            <li>Tuesday & Wednesday:  4pm-10pm</li>
-            <li>Thursday:  4pm-12am</li>
-            <li>Friday:  4pm-1am</li>
-            <li>Saturday:  2pm-1am</li>
-            <li>Sunday: 2pm-10pm</li>         
-          </ul>
-          <li>Phone: (206)486-4088</li>
-          <li>Email: Outlanderbrewing@gmail.com</li>
+          <li><a href='http://www.outlander.com/'>Outlander Brewing Website</a></li>
+          <li><a href='https://www.facebook.com/OUTLANDERBREW/'><img src='../images/icons/facebook.png' alt='facebook logo'/> Facebook</a></li>
+          <li><a href='https://twitter.com/outlanderbrew'><img src='../images/icons/twitter.png' alt='twitter logo'/> Twitter</a></li>
+          <li><a href='https://www.instagram.com/outlanderbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+          <li><a href='https://untappd.com/OutlanderBrewery'><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
         </ul>
       </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+      <div id='map'>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.6527931589885!2d-122.35775568454201!3d47.65231359281249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015a9b05a35d7%3A0x467c8ea9869faa86!2sOutlander+Brewery+and+Pub!5e0!3m2!1sen!2sus!4v1519352783737" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id="address">
+          <ul>
+            <li>225 N 36th St, </li>
+            <li>Seattle, WA 98103</li>
+            <li>Hours:</li>
+            <ul id="hours">
+              <li>Monday: CLOSED</li>
+              <li>Tuesday & Wednesday:  4pm-10pm</li>
+              <li>Thursday:  4pm-12am</li>
+              <li>Friday:  4pm-1am</li>
+              <li>Saturday:  2pm-1am</li>
+              <li>Sunday: 2pm-10pm</li>         
+            </ul>
+            <li>Phone: (206)486-4088</li>
+            <li>Email: Outlanderbrewing@gmail.com</li>
+          </ul>
+        </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
