--- a/pages/reubens.html
+++ b/pages/reubens.html
@@ -7,116 +7,118 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/reubens.png" alt="Reubens Brews">
-      <h2>Reuben's Brews</h2>
-      <p>Reuben’s Brews opened in the Ballard neighborhood of Seattle in August 2012, and ever since has become one of the most popular spots for local beer in the city. In their time on the scene, they have won several awards for their beers, including winning “Mid-Sized Brewery of the Year” at the 2015 Washington Beer Awards. A bit of trivia, Reuben’s Brews is named after founders Adam and Grace Robbing’s son, Reuben!</p>
-    </div>
-    <div id='social'>
-        <ul>
-          <li><a href='http://www.reubensbrews.com/'>Reuben's Brews Website</a></li>
-          <li><a href='https://www.facebook.com/Reubensbrews/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-          <li><a href='https://twitter.com/Reubensbrews'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
-          <li><a href='https://www.instagram.com/reubensbrews/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-          <li><a href='https://untappd.com/ReubensBrews'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/reubens.png" alt="Reubens Brews">
+        <h2>Reuben's Brews</h2>
+        <p>Reuben’s Brews opened in the Ballard neighborhood of Seattle in August 2012, and ever since has become one of the most popular spots for local beer in the city. In their time on the scene, they have won several awards for their beers, including winning “Mid-Sized Brewery of the Year” at the 2015 Washington Beer Awards. A bit of trivia, Reuben’s Brews is named after founders Adam and Grace Robbing’s son, Reuben!</p>
       </div>
-    <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.917328971093!2d-122.3730986!3d47.6653979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90d7c5a5e5dcf1ab!2sReuben&#39;s+Brews!5e0!3m2!1sen!2sus!4v1519276552356" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id='address'>
-      <ul>
-        <li>5010 14th Ave NW</li>
-        <li>Seattle, WA  98107</li>
+      <div id='social'>
+          <ul>
+            <li><a href='http://www.reubensbrews.com/'>Reuben's Brews Website</a></li>
+            <li><a href='https://www.facebook.com/Reubensbrews/'><img src='../images/icons/facebook.png' alt='facebook logo'/> Facebook</a></li>
+            <li><a href='https://twitter.com/Reubensbrews'><img src='../images/icons/twitter.png' alt='twitter logo'/> Twitter</a></li>
+            <li><a href='https://www.instagram.com/reubensbrews/'><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+            <li><a href='https://untappd.com/ReubensBrews'><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
+        </div>
+      <div id='map'>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.917328971093!2d-122.3730986!3d47.6653979!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90d7c5a5e5dcf1ab!2sReuben&#39;s+Brews!5e0!3m2!1sen!2sus!4v1519276552356" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id='address'>
         <ul>
-          <li>Daily: 11am - 10pm</li>
+          <li>5010 14th Ave NW</li>
+          <li>Seattle, WA  98107</li>
+          <ul>
+            <li>Daily: 11am - 10pm</li>
+          </ul>
+          <li>206-784-2859</li>
+          <li>reubensbrews@gmail.com</li>
         </ul>
-        <li>206-784-2859</li>
-        <li>reubensbrews@gmail.com</li>
-      </ul>
-    </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+      </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
