--- a/pages/ravenna.html
+++ b/pages/ravenna.html
@@ -7,125 +7,127 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-            <ul>
-              <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
-              <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
               <ul>
-                <li>
-                  <a href="">Ballard</a>
-                  <ul>
-                    <li><a href="peddler.html">Peddler Brewing</a></li>
-                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                    <li><a href="reubens.html">Reuben's Brews</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Capitol Hill</a>
-                  <ul>
-                    <li><a href="optimism.html">Optimism Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Central District</a>
-                  <ul>
-                    <li><a href="standard.html">Standard Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Fremont</a>
-                  <ul>
-                    <li><a href="fremont.html">Fremont Brewing</a></li>
-                    <li><a href="outlander.html">Outlander Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Interbay</a>
-                  <ul>
-                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Lake City</a>
-                  <ul>
-                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Magnolia</a>
-                  <ul>
-                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Pike Place</a>
-                  <ul>
-                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">SoDo</a>
-                  <ul>
-                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Ravenna</a>
-                  <ul>
-                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                  </ul>
-                </li>
-              </ul>
-              </li>
-              <li><a href="aboutus.html">About Us</a></li>
-            </ul>
-          </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/ravenna.png" alt="ravenna brewing">
-      <h2>Ravenna Brewing</h2>
-      <p>With a rotating stock of ales this Ravenna neighborhood gem is a hit for the locals.  It’s a nice cozy brewery nestled next to an auto body shop.  Owner Tommy Ortega poured his famous Lion Tamer bourbon vanilla porter on opening night in April 2016.  </p>
-    </div>
-    <div id='social'>
-        <ul>
-            <li><a href="http://www.ravennabrewing.com">Ravenna Brewing Website</a></li>
-            <li><a href="https://www.facebook.com/RavennaBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
-            <li><a href="https://twitter.com/RavennaBrewing"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
-            <li><a href="hhttp://instagram.com/ravennabrewing"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li>
-            <li><a href="https://untappd.com/RavennaBrewingCo"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
-        </ul>
-    </div>
-    <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.332525048134!2d-122.299239!3d47.668238!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb05b7c95104313ec!2sRavenna+Brewing+Co!5e0!3m2!1sen!2sus!4v1519275905013" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id='address'>
-        <ul>
-            <li>5408 26th Ave NE
-            </li>
-            <li>Seattle, WA 98105</li>
-            <li>hours:</li>
-                <ul id=hours>
-                    <li>Sunday  Noon-9pm</li>
-                    <li>Monday  Closed</li>
-                    <li>Tuesday 4pm-10pm</li>
-                    <li>Wednesday 4pm-10pm</li>
-                    <li>Thursday  4pm-10pm</li>
-                    <li>Friday   1pm-10pm</li>
-                    <li>Saturday  1pm-10pm</li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="../index.html">Finder</a></li>
+                <li><a href="">Breweries</a>
+                <ul>
+                  <li>
+                    <a href="">Ballard</a>
+                    <ul>
+                      <li><a href="peddler.html">Peddler Brewing</a></li>
+                      <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                      <li><a href="reubens.html">Reuben's Brews</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Capitol Hill</a>
+                    <ul>
+                      <li><a href="optimism.html">Optimism Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Central District</a>
+                    <ul>
+                      <li><a href="standard.html">Standard Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Fremont</a>
+                    <ul>
+                      <li><a href="fremont.html">Fremont Brewing</a></li>
+                      <li><a href="outlander.html">Outlander Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Interbay</a>
+                    <ul>
+                      <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Lake City</a>
+                    <ul>
+                      <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Magnolia</a>
+                    <ul>
+                      <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Pike Place</a>
+                    <ul>
+                      <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">SoDo</a>
+                    <ul>
+                      <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Ravenna</a>
+                    <ul>
+                      <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            <li>Phone: (206) 743-8450</li>
-        </ul>
-    </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+                </li>
+                <li><a href="aboutus.html">About Us</a></li>
+              </ul>
+            </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/ravenna.png" alt="ravenna brewing">
+        <h2>Ravenna Brewing</h2>
+        <p>With a rotating stock of ales this Ravenna neighborhood gem is a hit for the locals.  It’s a nice cozy brewery nestled next to an auto body shop.  Owner Tommy Ortega poured his famous Lion Tamer bourbon vanilla porter on opening night in April 2016.  </p>
+      </div>
+      <div id='social'>
+          <ul>
+              <li><a href="http://www.ravennabrewing.com">Ravenna Brewing Website</a></li>
+              <li><a href="https://www.facebook.com/RavennaBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
+              <li><a href="https://twitter.com/RavennaBrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+              <li><a href="hhttp://instagram.com/ravennabrewing"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
+              <li><a href="https://untappd.com/RavennaBrewingCo"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
+          </ul>
+      </div>
+      <div id='map'>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.332525048134!2d-122.299239!3d47.668238!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb05b7c95104313ec!2sRavenna+Brewing+Co!5e0!3m2!1sen!2sus!4v1519275905013" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id='address'>
+          <ul>
+              <li>5408 26th Ave NE
+              </li>
+              <li>Seattle, WA 98105</li>
+              <li>hours:</li>
+                  <ul id=hours>
+                      <li>Sunday  Noon-9pm</li>
+                      <li>Monday  Closed</li>
+                      <li>Tuesday 4pm-10pm</li>
+                      <li>Wednesday 4pm-10pm</li>
+                      <li>Thursday  4pm-10pm</li>
+                      <li>Friday   1pm-10pm</li>
+                      <li>Saturday  1pm-10pm</li>
+                  </ul>
+              <li>Phone: (206) 743-8450</li>
+          </ul>
+      </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
   <script src = "app.js"></script>
 </body>
 </html>
